# Native-Call-Hook

./: .gitignore  LICENSE  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/lt/vilniustech/ezukauskas/nativecallhook/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  encrypt_lib.py  lib_a.cpp  lib_b.cpp  nativecallhook.cpp
app/src/main/java/lt/vilniustech/ezukauskas/nativecallhook/: MainActivity.java  TestActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/lt/vilniustech/ezukauskas/nativecallhook/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
nativecallhook/: build.gradle
nativecallhook/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp  jni_bridge_test.cpp  nativecallhook.cpp  nativecallhook.h  test_harness.cpp  test_harness.h
nativecallhook/src/main/java/lt/vilniustech/ezukauskas/nativecallhook/: NativeCallHook.java  NativeCallHookTestHarness.java
tests/: run_tests.py
tests/outputs/: 4_10_failsafe_extra.txt  4_11_robustness.txt  4_12_hook_overhead.txt  4_1_environment.txt  4_2_encryption_verification.txt  4_3_hook_installation.txt  4_4_unprotected_passthrough.txt  4_5_protected_load.txt  4_6_native_to_native.txt  4_7_failsafe.txt  4_8_load_order.txt  4_9_benchmark.txt  proc_maps_normal.txt
thesis/: ai_marked_text_extracted.txt  main.tex
thesis/diagrams/: class.mmd  component.mmd  deployment.mmd  object.mmd  sequence.mmd
thesis/images/: Untitled Diagram.drawio  high_level_overview_of_proposed_system.drawio
thesis/presentation/: high_level_overview_of_proposed_system.drawio  spoken_text_BD2.md  temp.md
thesis/presentation/diagrames/: analize.mermaid  elf_struktura.mermaid  init_hook.mermaid  metodu_palyginimas.html  plt_peremimas.mermaid  problema.md  problema.mermaid  proxy_funkcija.mermaid  sifravimas.mermaid  testavimas.html
